@startuml

left to right direction
entity Mision{
    rut del habitante
    id del suministro objetivo
    fecha
    cantidad recuperada
    resultado
}

entity Habitante{
    rut
    nombre
    apellido
    nombreUsuario
    contrasenia
    rol
    rango
}

entity Suministro{
    id
    tipo
    descripcion
    peso
    cantidad
    estado
}


Habitante"1"--->"1"Suministro: administra >
note on link: Solo los supervivientes con rango leyenda\npueden administrar los suministros

Habitante"1"--->"1..*"Mision: participa >

Mision"1"--->"1..*"Suministro: obtiene >


@enduml